name:                calculatorrepl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/calculatorrepl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Christopher Bacon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable calculatorrepl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base
                     , regex-posix
                     , split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/calculatorrepl
